crates/viewer/dl_recording_panel/tests/snapshots/snapshot_tests__empty_context_test.snap
---
source: crates/viewer/dl_recording_panel/tests/snapshot_tests.rs
expression: data
---
servers: []
local_apps:
  - app_id: test_app
    is_active: false
    is_selected: false
    loaded_recordings:
      - entity_db:
          kind: Recording
          application_id: test_app
          recording_id: test_recording
local_tables: []
example_apps: []
show_example_section: true
loading_receivers: []
